--- a/sass/settings/_settings.global.scss
+++ b/sass/settings/_settings.global.scss
@@ -27,3 +27,6 @@ $base-transition:       all .1s ease-in;
 
 $ease:                  cubic-bezier(.43, .11, .41, 1);
 $easing-circ:           cubic-bezier(.075, .82, .165, 0);
+
+// Border Radius
+$global-border-radius: .5rem;
