--- a/sass/components/_components.header.scss
+++ b/sass/components/_components.header.scss
@@ -5,7 +5,9 @@
 }
 
 .c-header__cart {
-  padding: $spacing-xs;
+  padding: $spacing-xs $spacing-s;
   background: $colour-text;
   color: $colour-white;
+  border-radius: $global-border-radius;
+  box-shadow: inset 0 -.3rem 0 0 darken($colour-text, 10);
 }
