--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -1,1 +1,6 @@
 @import "components.header";
+@import "components.icon";
+@import "components.nav-bar";
+@import "components.button";
+@import "components.product-card";
+@import "components.product-gallery";
