--- a/sass/settings/_settings.colours.interface.scss
+++ b/sass/settings/_settings.colours.interface.scss
@@ -1,5 +1,6 @@
 $colour-brand: $half-spanish-white;
 $colour-text: $dune;
 $colour-framing: $wild-sand;
+$colour-suplementary: $star-dust;
 $colour-do: $pumpkin;
 $colour-white: $white;
