--- a/assets/main.css
+++ b/assets/main.css
@@ -389,18 +389,113 @@ hr {
   margin: 0;
   padding: 0; }
 
+.t-paragraph {
+  color: #3B342F; }
+
+.t-supplementary {
+  color: #9B9B9B; }
+
 html {
   font-size: 10px;
   font-family: 'roboto', 'helvetica neue', sans-serif; }
 
+.l-wrapper {
+  padding: 0 3rem;
+  max-width: 118rem;
+  margin-left: auto;
+  margin-right: auto; }
+  @media (max-width: 768px) {
+    .l-wrapper {
+      padding: 0 2rem; } }
+
+.l-cart-shipping-description {
+  margin-bottom: 1.5rem; }
+
 .c-header {
-  height: 12rem;
+  background: #FCF1D9; }
+  .c-header__wrapper {
+    height: 12rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; }
+    @media (max-width: 768px) {
+      .c-header__wrapper {
+        height: 8rem;
+        justify-content: center; } }
+  .c-header__cart {
+    display: flex;
+    align-items: center;
+    max-width: 30rem; }
+    @media (max-width: 768px) {
+      .c-header__cart {
+        display: none; } }
+  .c-header__cart-icon {
+    width: 2.4rem;
+    height: 2.4rem;
+    fill: #fff;
+    margin-right: 0.75rem; }
+
+.cart-button-spacer {
+  margin: 0 0.5rem; }
+
+.cart-button__item-count {
+  margin-right: 0.25rem; }
+
+.c-icon {
+  width: 2.4rem;
+  height: 2.4rem; }
+
+@media (max-width: 768px) {
+  .c-nav-bar {
+    background: #fefaf1; } }
+
+.c-nav-bar__wrapper {
+  height: 7rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  @media (max-width: 768px) {
+    .c-nav-bar__wrapper {
+      height: 6rem; } }
+
+.c-nav-bar__links {
+  border-bottom: 1px solid #F5F5F5; }
+
+.c-nav-bar__mobile-links {
+  margin: 0; }
+
+.c-nav-bar__cart {
+  margin-right: 0.75rem; }
+  @media (max-width: 768px) {
+    .c-nav-bar__cart {
+      margin-right: 0.5rem; } }
+
+.c-nav-bar__menu-button {
   display: flex;
   align-items: center; }
 
-.c-header__cart {
-  padding: 0.8rem 1.2rem;
+.c-nav-bar__menu-icon {
+  fill: #3B342F; }
+
+.c-btn {
+  padding: 0.75rem 1.5rem;
   background: #3B342F;
   color: #fff;
   border-radius: 0.5rem;
-  box-shadow: inset 0 -0.3rem 0 0 #1f1b18; }
+  font-weight: 600; }
+  .c-btn:hover {
+    opacity: .9;
+    color: #fff; }
+  .c-btn:active {
+    opacity: 1; }
+  .c-btn__neutral {
+    background: #9B9B9B; }
+
+.c-product-card__title {
+  font-size: 1.4rem; }
+
+.c-product-card__meta {
+  margin-bottom: 3rem; }
+
+.product-single__photos {
+  border: 1px solid #F5F5F5; }
