--- a/sass/settings/_index.scss
+++ b/sass/settings/_index.scss
@@ -1,3 +1,4 @@
 @import "settings.global";
+@import "settings.breakpoints";
 @import "settings.colours.base";
 @import "settings.colours.interface";
