--- a/snippets/product-grid-item.liquid
+++ b/snippets/product-grid-item.liquid
@@ -37,7 +37,7 @@
   {% assign sold_out = false %}
 {% endif %}
 
-<div class="grid__item {{ grid_item_width }}">
+<div class="grid__item {{ grid_item_width }} c-product-card">
 
   {% comment %}
     Link to your product with the 'within: collection' filter for the link to be aware of the collection.
@@ -55,10 +55,10 @@
     <img src="{{ product.featured_image.src | img_url: 'large' }}" alt="{{ product.featured_image.alt | escape }}">
   </a>
 
-  <p class="h6">
+  <p class="h6 c-product-card__title">
     <a href="{{ product.url | within: collection }}">{{ product.title }}</a>
   </p>
-  <p>
+  <p class="c-product-card__meta">
     {% comment %}
       You can show a leading 'from' or 'up to' by checking 'product.price_varies'
       if your variants have different prices.
