--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -105,7 +105,7 @@
           <label for="Quantity" class="quantity-selector">{{ 'products.product.quantity' | t }}</label>
           <input type="number" id="Quantity" name="quantity" value="1" min="1" class="quantity-selector">
 
-          <button type="submit" name="add" id="AddToCart" class="btn">
+          <button type="submit" name="add" id="AddToCart" class="c-btn">
             <span id="AddToCartText">{{ 'products.product.add_to_cart' | t }}</span>
           </button>
         </form>
