--- a/templates/customers/account.liquid
+++ b/templates/customers/account.liquid
@@ -22,7 +22,7 @@
       {% if customer.orders.size != 0 %}
 
         <div class="table-wrap">
-          <table class="full">
+          <table class="c-table full">
             <thead>
               <tr>
                 <th>{{ 'customer.orders.order_number' | t }}</th>
