--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -4,3 +4,4 @@
 @import "components.button";
 @import "components.product-card";
 @import "components.product-gallery";
+@import "components.table";
