--- a/sass/objects/_objects.cart.scss
+++ b/sass/objects/_objects.cart.scss
@@ -1,3 +1,47 @@
 .l-cart-shipping-description {
   margin-bottom: $spacing-l;
 }
+
+.l-cart-actions {
+  display: flex;
+  flex-wrap: wrap;
+  padding: $spacing-l;
+  background: $colour-framing;
+
+  &__delivery-date {
+    margin-bottom: $spacing-xl;
+  }
+
+  &__attributes,
+  &__totals {
+    width: 50%;
+
+    @include tablet {
+      width: 100%;
+    };
+  }
+
+  &__totals {
+    text-align: right;
+  }
+}
+
+// Responsive Table Override
+.c-cart-table {
+  @include tablet {
+    font-size: 1.4rem;
+
+    td {
+      padding: $spacing-l $spacing-s;
+    }
+
+    .h4,
+    .h3 {
+      font-size: 16px;
+    }
+  };
+}
+
+.c-cart-table__quantity-input {
+  max-width: 8rem;
+}
