--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -19,12 +19,10 @@
   {% endcomment %}
   {% assign current_variant = product.selected_or_first_available_variant %}
 
-  {% include 'breadcrumb' %}
-
   <div class="grid product-single">
     <div class="grid__item large--one-half text-center">
+      {% assign featured_image = current_variant.featured_image | default: product.featured_image %}
       <div class="product-single__photos" id="ProductPhoto">
-        {% assign featured_image = current_variant.featured_image | default: product.featured_image %}
         <img src="{{ featured_image | img_url: 'large' }}" alt="{{ featured_image.alt | escape }}" id="ProductPhotoImg">
       </div>
 
@@ -112,7 +110,7 @@
 
       </div>
 
-      <div class="product-description rte" itemprop="description">
+      <div class="product-description t-paragraph rte" itemprop="description">
         {{ product.description }}
       </div>
 
