--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -5,3 +5,6 @@
 @import "components.product-card";
 @import "components.product-gallery";
 @import "components.table";
+@import "components.footer";
+@import "components.preloader";
+@import "components.store";
