--- a/sass/settings/_settings.colours.interface.scss
+++ b/sass/settings/_settings.colours.interface.scss
@@ -4,3 +4,4 @@ $colour-framing: $wild-sand;
 $colour-suplementary: $star-dust;
 $colour-do: $pumpkin;
 $colour-white: $white;
+$colour-footer-bg: $masala;
