--- a/sass/generic/_generic.typography.scss
+++ b/sass/generic/_generic.typography.scss
@@ -22,15 +22,22 @@ select {
   font-size: $base-font-size;
   font-family: $body-font-stack;
   color: $colour-text;
-  font-weight: 300;
+  font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
+  line-height: initial;
+  min-height: 4rem;
+}
+
+label {
+  display: block;
+  margin-bottom: $spacing-s;
 }
 
 h1, h2, h3, h4, h5, h6 {
   display: block;
   font-family: $header-font-stack;
-  font-weight: 300;
+  font-weight: 400;
   margin: 0 0 0.5em;
   line-height: 1.4;
 
