--- a/templates/customers/activate_account.liquid
+++ b/templates/customers/activate_account.liquid
@@ -20,8 +20,8 @@
         <label for="CustomerPasswordConfirmation" class="hidden-label">{{ 'customer.activate_account.password_confirm' | t }}</label>
         <input type="password" value="" name="customer[password_confirmation]" id="CustomerPasswordConfirmation" class="input-full" placeholder="{{ 'customer.activate_account.password_confirm' | t }}">
 
-        <input type="submit" class="btn btn--full" value="{{ 'customer.activate_account.submit' | t }}">
-        <input type="submit" class="btn--secondary btn--full" name="decline" value="{{ 'customer.activate_account.cancel' | t }}">
+        <input type="submit" class="c-btn btn--full" value="{{ 'customer.activate_account.submit' | t }}">
+        <input type="submit" class="c-btn--neutral btn--full" name="decline" value="{{ 'customer.activate_account.cancel' | t }}">
       {% endform %}
     </div>
 
