--- a/templates/customers/addresses.liquid
+++ b/templates/customers/addresses.liquid
@@ -13,7 +13,7 @@
 <header class="section-header">
   <h1 class="section-header__left">{{ 'customer.account.title' | t }}</h1>
   <div class="section-header__right">
-    <a href="#" class="btn" onclick="Shopify.CustomerAddress.toggleNewForm(); return false;">{{ 'customer.addresses.add_new' | t }}</a>
+    <a href="#" class="c-btn" onclick="Shopify.CustomerAddress.toggleNewForm(); return false;">{{ 'customer.addresses.add_new' | t }}</a>
   </div>
 </header>
 
@@ -89,7 +89,7 @@
           <label for="address_default_address_new" class="inline">{{ 'customer.addresses.set_default' | t }}</label>
         </p>
 
-        <p><input type="submit" class="btn" value="{{ 'customer.addresses.add' | t }}"></p>
+        <p><input type="submit" class="c-btn" value="{{ 'customer.addresses.add' | t }}"></p>
         <p><a href="#" onclick="Shopify.CustomerAddress.toggleNewForm(); return false;">{{ 'customer.addresses.cancel' | t }}</a></p>
 
         <hr>
@@ -179,7 +179,7 @@
             <label for="address_default_address_{{ form.id }}" class="inline">{{ 'customer.addresses.set_default' | t }}</label>
           </p>
 
-          <p><input type="submit" class="btn" value="{{ 'customer.addresses.update' | t }}"></p>
+          <p><input type="submit" class="c-btn" value="{{ 'customer.addresses.update' | t }}"></p>
           <p><a href="#" onclick="Shopify.CustomerAddress.toggleForm({{ form.id }}); return false;">{{ 'customer.addresses.cancel' | t }}</a></p>
 
           <hr>
