--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -24,7 +24,7 @@
         <input type="password" name="customer[password]" id="CreatePassword" class="input-full{% if form.errors contains 'password' %} error{% endif %}" placeholder="{{ 'customer.register.password' | t }}">
 
         <p>
-          <input type="submit" value="{{ 'customer.register.submit' | t }}" class="c-c-btn c-btn--full">
+          <input type="submit" value="{{ 'customer.register.submit' | t }}" class="c-btn btn--full">
         </p>
         <a href="{{ shop.url }}">{{ 'customer.register.cancel' | t }}</a>
 
