update password page

--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -9,3 +9,4 @@
 @import "components.preloader";
 @import "components.store";
 @import "components.message-panel";
+@import "components.password-panel";
