--- a/assets/main.css
+++ b/assets/main.css
@@ -434,6 +434,9 @@ html,
 body {
   min-height: 100vh; }
 
+a {
+  text-decoration: underline; }
+
 .l-wrapper {
   padding: 0 3rem;
   max-width: 118rem;
@@ -497,6 +500,13 @@ body {
       flex-wrap: wrap;
       flex-direction: column;
       align-items: center; } }
+
+.l-password-protect-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #FCF1D9;
+  height: 100%; }
 
 .c-header {
   background: #FCF1D9; }
@@ -747,3 +757,32 @@ body {
   .c-message-panel__image {
     max-width: 15rem;
     margin-bottom: 3rem; }
+
+.c-password-panel {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  max-width: 50rem;
+  padding: 5rem;
+  flex-direction: column;
+  border-radius: 10px;
+  text-align: left; }
+  @media (max-width: 768px) {
+    .c-password-panel {
+      background: transparent; } }
+
+.c-password-panel__logo {
+  max-width: 10rem;
+  margin-bottom: 3rem; }
+
+.c-password-panel__header {
+  font-size: 5rem;
+  font-weight: 700;
+  line-height: 1.2;
+  text-transform: uppercase; }
+
+.c-password-panel__description {
+  line-height: 1.6; }
+  @media (max-width: 768px) {
+    .c-password-panel__description {
+      color: #3B342F; } }
