--- a/sass/components/_components.preloader.scss
+++ b/sass/components/_components.preloader.scss
@@ -5,7 +5,7 @@
   right: 0;
   left: 0;
   z-index: 1;
-  background: transparentize($colour-white, .05);
+  background: $colour-white;
   display: flex;
   align-items: center;
   justify-content: center;
