--- a/sass/objects/_objects.cart.scss
+++ b/sass/objects/_objects.cart.scss
@@ -8,11 +8,30 @@
   padding: $spacing-l;
   background: $colour-framing;
 
+  &__dates {
+    display: flex;
+  }
+
+  &__date {
+    flex-basis: 50%;
+  }
+
   &__delivery-date {
     margin-bottom: $spacing-xl;
     display: flex;
     flex-direction: column;
   }
+
+  &__delivery-date__disclaimer {
+    margin: $spacing 0;
+    font-size: 1.3rem;
+    font-style: italic;
+  }
+
+  &__label {
+    font-weight: bold;
+  }
+
 
   &__attributes,
   &__totals {
@@ -26,6 +45,49 @@
   &__totals {
     text-align: right;
   }
+}
+
+// Delivery Method Tabs
+
+.c-tabs {
+  position: relative;
+  width: 100%;
+  min-height: 16rem;
+}
+
+.c-tab {
+  float: left;
+
+  & + & {
+    margin-left: $spacing-l;
+  }
+}
+
+.c-tab__radio-input {
+  display: block;
+
+  &:checked {
+    ~ .c-tab__content {
+      display: block;
+      position: absolute;
+      left: 0;
+    }
+  }
+}
+
+// Instruction Text Area
+.l-cart-actions__instruction-text-area {
+  line-height: 1.6;
+  width: 100%;
+  min-height: 10rem;
+}
+
+.c-tab__label {
+  display: inline-block;
+}
+
+.c-tab__content {
+  display: none;
 }
 
 // Responsive Table Override
